force-app/main/default/objects/PJP_Item__c/PJP_Item__c.object-meta.xml
<CustomObject>
    <label>PJP Item</label>
    <nameField>
        <displayFormat>ITEM - {0000}</displayFormat>
        <label>PJP Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PJP Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>