force-app/main/default/objects/PJP_Item__c/fields/Assigned_Beat__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>PJP Items (Worked Beat)</relationshipLabel>
    <relationshipName>PJP_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>