force-app/main/default/objects/PJP_Item__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved Beat</label>
    <referenceTo>Child_beat__c</referenceTo>
    <relationshipLabel>PJP Items</relationshipLabel>
    <relationshipName>PJP_Items</relationshipName>
    <type>Lookup</type>
</CustomField>