force-app/main/default/objects/PJP_Item__c/fields/Employee_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code_Text__c</fullName>
    <label>Employee Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>