force-app/main/default/objects/PJP_Item__c/fields/Mapping_Id__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Id__c</fullName>
    <externalId>true</externalId>
    <label>PJP Item ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>