force-app/main/default/objects/PJP_Item__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>