force-app/main/default/objects/PJP_Item__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <formula>CASESAFEID(PJP__r.User__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>