force-app/main/default/objects/PJP_Item__c/fields/PJP__c.field-meta.xml
<CustomField>
    <fullName>PJP__c</fullName>
    <label>PJP</label>
    <referenceTo>Calendar_beat__c</referenceTo>
    <relationshipLabel>PJP Items</relationshipLabel>
    <relationshipName>PJP_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>